@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.234 2009-12-18 13:01:15 franklahm Exp $
+dnl $Id: configure.in,v 1.235 2009-12-23 15:53:15 franklahm Exp $
 dnl configure.in for netatalk
 
 AC_INIT(etc/afpd/main.c)
@@ -1216,6 +1216,7 @@ AC_OUTPUT([Makefile
 	contrib/shell_utils/apple_cp
 	contrib/shell_utils/apple_mv
 	contrib/shell_utils/apple_rm
+    contrib/shell_utils/asaddump
 	contrib/shell_utils/asip-status.pl
 	contrib/timelord/Makefile
 	contrib/a2boot/Makefile
