@@ -9,3 +9,4 @@ cleanappledouble.pl
 netatalkshorternamelinks.pl
 lp2pap.sh
 asip-status.pl
+asaddump
