@@ -7,7 +7,8 @@ TEMPLATE_FILES = lp2pap.sh.tmpl
 PERLSCRIPTS = \
 	afpd-mtab.pl \
 	apple_cp apple_mv apple_rm  \
-	asip-status.pl
+	asip-status.pl \
+	asaddump
 
 SUFFIXES = .tmpl .
 
